# mont

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  flake.nix  justfile
.github/: copilot-instructions.md
backend/: Cargo.toml  justfile
backend/migrations/: 00001_init.sql  00002_workouts.sql  00003_weight.sql  00004_runs.sql  00005_runs_source_file.sql  00006_workout_templates.sql  00007_muscle_group.sql  00008_run_invalid.sql  00009_daily_health.sql  00010_runs_cadence.sql  00011_runs_weather.sql  00012_daily_health_stress.sql  00013_workout_set_timestamp.sql  00014_exercise_equipment.sql  00015_indexes.sql  00016_drop_workout_templates.sql  00017_exercise_name_equipment_unique.sql  00018_check_constraints.sql  00018_exercise_name_equipment_unique.sql  00019_runs_calories.sql  00020_blocked_runs.sql  00021_exercise_categories.sql  00022_calorie_entries.sql  00023_nutrition_targets_and_exercise_kcal.sql  00024_calorie_entry_per100g.sql  00025_saved_foods.sql  00026_foods_and_barcodes.sql  00027_foods_catalog_and_seed_vegan.sql  00028_body_pictures.sql  00029_issue_reports.sql  00030_meals.sql  00031_hyrox_days.sql
backend/scripts/: seed_foods_dev.sh  seed_foods_vegan.sql
backend/src/: app.rs  auth_middleware.rs  config.rs  db.rs  embedded_web.rs  error.rs  lib.rs  logging.rs  main.rs  models.rs  pagination.rs  rate_limit.rs  weather.rs
backend/src/routes/: auth.rs  calories.rs  exercises.rs  health.rs  hyrox.rs  issues.rs  meals.rs  mod.rs  runs.rs  templates.rs  weight.rs  workouts.rs
backend/tests/: api_surface_tests.rs  auth_tests.rs  calories_tests.rs  edge_case_tests.rs  exercise_tests.rs  health_tests.rs  hyrox_tests.rs  pagination_tests.rs  rate_limit_tests.rs  run_tests.rs  template_tests.rs  weight_tests.rs  workout_tests.rs
backend/tests/common/: mod.rs
backend/web_build/: index.html
flutter/: README.md  justfile  pubspec.yaml
(+78 files in other folders)
