[package]
name = "mont"
version = "0.3.0"
edition = "2024"
license = "GPLv3"
authors = ["Mathieu Moalic <mont@matmoa.eu>"]
description = "Workout and run tracker"
homepage = "https://github.com/MathieuMoalic/mont"
repository = "https://github.com/MathieuMoalic/mont"
readme = "../README.md"
keywords = ["workout", "fitness", "tracker"]
categories = ["web-programming"]

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "chrono"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
anyhow = "1"
jsonwebtoken = "9"
argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"
rand = "0.8"
rpassword = "7"
clap = { version = "4", features = ["derive", "env"] }
tracing-appender = "0.2"
rust-embed = "8"
chrono = "0.4"
mime_guess = "2"
roxmltree = "0.19"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tempfile = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
